--- a/PorscheDigital/my-app/index.html
+++ b/PorscheDigital/my-app/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="src/assets/images/porsche-crest@1x.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Porsche Connect</title>
   </head>
   <body>
     <div id="root"></div>
